[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/sprites/MalfuncObjects/PC.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Malfunctions/MalScript.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60.5, 54 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.2, 0.8, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="PC" type="Area2D"]
position = Vector2( -440, 410 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.01453, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.485474, 9 )
scale = Vector2( 0.261628, 0.261628 )
texture = ExtResource( 1 )

[node name="Light" type="Sprite" parent="."]
visible = false

[node name="HGradient" type="Sprite" parent="Light"]
position = Vector2( -1.00002, 3.63 )
scale = Vector2( 0.0585937, 101.26 )
texture = SubResource( 3 )

[node name="Vertical" type="Sprite" parent="Light"]
position = Vector2( -1, 6 )
rotation = 1.5708
scale = Vector2( 0.0585937, 100 )

[node name="VGradient" type="Sprite" parent="Light/Vertical"]
position = Vector2( -43.7138, -0.000607461 )
scale = Vector2( 0.84966, 1.20796 )
texture = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -92.0
margin_top = -80.0
margin_right = 94.0
margin_bottom = -61.0
custom_fonts/font = SubResource( 4 )
text = "Зажми W, чтобы чинить"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -89.0
margin_top = -97.0
margin_right = 91.0
margin_bottom = -83.0
value = 50.0

[node name="debug" type="Label" parent="."]
visible = false
margin_left = 67.0
margin_top = -143.0
margin_right = 107.0
margin_bottom = -129.0
text = "{timer.time_left}"

[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Node2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
